1.18-3.0.7:
- Port to 1.18.2

1.18-3.0.6:
- Explosis updated the dimensional shard ore textures

1.18-3.0.5:
- New API for RFToolsDimensions

1.18-3.0.4:
- Fixes to the Patchouli manual

1.18-3.0.3:
- Fixed a problem with dimensional shards in the nether/end

1.18-3.0.2:
- Fixed a problem with items not getting restored when breaking and placing blocks
- Fixed a crash bug when clicking outside the filter gui

1.18-3.0.1:
- Updates for McJtyLib and fixes

1.18-3.0.0:
- First release in 1.18

1.16-2.1.1:
- Updated to latest version of McJtyLib

1.16-2.1.0:
- Updated to latest version of McJtyLib
- Fix information screen capability (the information screen was broken)

1.16-2.0.11:
- Small fix for mojang mappings

1.16-2.0.10:
- Moved oregen config for dimensional shards from SERVER to COMMON so it can be configured

1.16-2.0.9:
- Dimensional shard ore is now attached to the forge:ores tag

1.16-2.0.8:
- Re-added some XNet API classes
- Dimensional shards now generate properly in the overworld, end, and nether

1.16-2.0.7:
- Fixed truetype rendering

1.16-2.0.6:
- Fixed a problem with the itemfilter which had broken tag support

1.16-2.0.5:
- Update to latest McJtyLib

1.16-2.0.4-beta:
- Update to latest McJtyLib

2.0.3-beta:
- Fixed a problem on servers

2.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

2.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

2.0.0-beta:
- First port to 1.16.2

1.1.4:
- Fixed a potential exploit which could be used to attack a server

1.1.3-beta:
- New 'tick order' system for the endergenic power generator

1.1.2-beta:
- Update for latest McJtyLib

1.1.1-beta:
- Dependency fix

1.1.0-beta:
- Better tooltips for many blocks and items
- The filter module now supports an alternative for the ore dictionary where it will try to match blocks using common known tags
- The filter module is now unlimited and has full support for tags. It is also whitelist mode by default now